added method for create pdf file

--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,13 @@
             <artifactId>vaadin-testbench-junit5</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>net.sf.jasperreports</groupId>
+            <artifactId>jasperreports</artifactId>
+            <version>6.21.3</version>
+        </dependency>
+
     </dependencies>
 
     <build>
